Fixes #862 SVG decorator is aligned by icon and not text. Fix replaceable dbl-click for svg-decorator.

--- a/src/client/decorators/SVGDecorator/Core/_SVGDecorator.scss
+++ b/src/client/decorators/SVGDecorator/Core/_SVGDecorator.scss
@@ -17,7 +17,6 @@ $port-height: 13px;
 
 @mixin svg_decorator_core {
   .svg-decorator {
-    text-align: center;
     position: relative;
 
     .svg-content {
