--- a/src/client/decorators/SVGDecorator/DiagramDesigner/SVGDecorator.DiagramDesignerWidget.scss
+++ b/src/client/decorators/SVGDecorator/DiagramDesigner/SVGDecorator.DiagramDesignerWidget.scss
@@ -11,6 +11,13 @@
 //overwrite / extend with local modifications
 .designer-item {
   .svg-decorator {
+    .name {
+      position: absolute;
+    }
+    .replaceable {
+      text-align: center;
+      margin-top: 16px;
+    }
     .svg-content {
       svg {
         border: $border;
